syntax = "proto3";

package images;

option go_package = "./internal/delivery/grpc/pb;images";

service ImageService {
  rpc UploadImage(UploadImageRequest) returns (ImageResponse) {}
  rpc GetImage(GetImageRequest) returns (ImageResponse) {}
}

message UploadImageRequest {
  bytes data = 1;
}

message GetImageRequest {
  string id = 1;
}

message ThumbnailShort {
  string size = 1;
  string url = 2;
  string type = 3;
}

message ImageResponse {
  string id = 1;
  string original_url = 2;
  optional string compressed_url = 3;
  string status = 4;
  optional string error_message = 5;
  repeated ThumbnailShort thumbnails = 6;
}